improved accessibility continued, fixed layout alignments

--- a/style.css
+++ b/style.css
@@ -4,6 +4,26 @@ body {
   font-weight: 300;
 }
 
+h1 {
+  font-size: 0.1em;
+  color: hsl(217, 54%, 11%);
+}
+
+.skip-link {
+  background: hsl(217, 54%, 11%);
+  color: #fff;
+  font-weight: 700;
+  left: 45%;
+  padding: 8px;
+  position: absolute;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+
+.skip-link:focus {
+  transform: translateY(0%);
+}
+
 /* Parent container  */
 
 .container {
@@ -70,7 +90,7 @@ body {
 /* NFT Card format section */
 
 .nft-card {
-  height: 565px;
+  height: 600px;
   width: 350px;
   background: hsl(216, 50%, 16%);
   border-radius: 20px;
@@ -85,7 +105,7 @@ body {
   font-size: 1.4rem;
   font-weight: 600;
   color: hsl(0, 0%, 100%);
-  margin-top: 20px;
+  margin-top: 25px;
   margin-left: 25px;
 }
 .card-title:hover {
@@ -96,22 +116,23 @@ body {
 /* Card description */
 .card-description {
   line-height: 1.75rem;
+  padding-bottom: 20px;
   color: hsl(215, 51%, 70%);
-  font-weight: 100;
-  font-size: 1.05rem;
-  margin: -15px 20px auto 25px;
+  font-weight: 300;
+  font-size: 1.15rem;
+  margin: -5px 20px auto 25px;
 }
 
 /* Crypto price and symbol */
 .crypto-symbol {
-  margin: 20px 2px -4px 25px;
+  margin: 10px 4px -4px 25px;
   display: inline;
 }
 
 .crypto-price {
   color: hsl(178, 100%, 50%);
-  font-weight: 600;
-  font-size: 1.125rem;
+  font-weight: 400;
+  font-size: 1rem;
   display: inline;
 }
 
@@ -123,16 +144,16 @@ body {
 
 .days-indicator {
   display: inline;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: hsl(215, 51%, 70%);
-  margin-left: 93px;
+  margin-left: 110px;
   font-weight: 400;
 }
 
 .divider {
-  border-color: hsl(215, 51%, 70%);
+  border-color: hsl(215, 32%, 27%);
   margin-top: 15px;
-  height: 0.5px;
+  height: 1px;
   margin-left: 25px;
   margin-right: 25px;
 }
@@ -159,12 +180,4 @@ body {
 
 .creator-name:hover {
   color: hsl(178, 100%, 50%);
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
 }
